fixed z-index sidebar

--- a/css/sass/partials/_frontend/_menubar-side.scss
+++ b/css/sass/partials/_frontend/_menubar-side.scss
@@ -12,6 +12,7 @@ body.admin-bar .kb-sidebar-wrap, body.admin-bar .kb-sidebar-extension {
   //  border-right: 1px solid #f2f2f2;
   box-shadow: 0px 1px 8px #333;
   font-family: 'Open Sans';
+  z-index: 2000;
 }
 
 
